Tocalang/MinhaLinguagemParser.py
# Generated from MinhaLinguagem.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MinhaLinguagemParser ( Parser ):

    grammarFileName = "MinhaLinguagem.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'/'", "'+'", "'-'", "'DECLARACOES'", 
                     "'ALGORITMO'", "'INTEIRO'", "'REAL'", "'BOOLEANO'", 
                     "'TEXTO'", "'ATRIBUIR'", "'A'", "'LER'", "'IMPRIMIR'", 
                     "'SE'", "'ENTAO'", "'SENAO'", "'ENQUANTO'", "'INICIO'", 
                     "'FIM'", "'E'", "'OU'", "'PARA'", "'DE'", "'ATE'", 
                     "'FACA'", "'ESCOLHA'", "'CASO'", "'PADRAO'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':'", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "K_DECLARACOES", "K_ALGORITMO", "K_INTEIRO", 
                      "K_REAL", "K_BOOLEANO", "K_TEXTO", "K_ATRIBUIR", "K_A", 
                      "K_LER", "K_IMPRIMIR", "K_SE", "K_ENTAO", "K_SENAO", 
                      "K_ENQUANTO", "K_INICIO", "K_FIM", "K_E", "K_OU", 
                      "K_PARA", "K_DE", "K_ATE", "K_FACA", "K_ESCOLHA", 
                      "K_CASO", "K_PADRAO", "BOOL_LIT", "NUMINT", "NUMREAL", 
                      "VARIAVEL", "CADEIA", "COMENTARIO", "WS", "OP_REL", 
                      "DELIM", "ABREPAR", "FECHAPAR" ]

    RULE_programa = 0
    RULE_declaracao = 1
    RULE_tipo = 2
    RULE_comando = 3
    RULE_expr = 4

    ruleNames =  [ "programa", "declaracao", "tipo", "comando", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    K_DECLARACOES=5
    K_ALGORITMO=6
    K_INTEIRO=7
    K_REAL=8
    K_BOOLEANO=9
    K_TEXTO=10
    K_ATRIBUIR=11
    K_A=12
    K_LER=13
    K_IMPRIMIR=14
    K_SE=15
    K_ENTAO=16
    K_SENAO=17
    K_ENQUANTO=18
    K_INICIO=19
    K_FIM=20
    K_E=21
    K_OU=22
    K_PARA=23
    K_DE=24
    K_ATE=25
    K_FACA=26
    K_ESCOLHA=27
    K_CASO=28
    K_PADRAO=29
    BOOL_LIT=30
    NUMINT=31
    NUMREAL=32
    VARIAVEL=33
    CADEIA=34
    COMENTARIO=35
    WS=36
    OP_REL=37
    DELIM=38
    ABREPAR=39
    FECHAPAR=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_DECLARACOES(self):
            return self.getToken(MinhaLinguagemParser.K_DECLARACOES, 0)

        def K_ALGORITMO(self):
            return self.getToken(MinhaLinguagemParser.K_ALGORITMO, 0)

        def K_INICIO(self):
            return self.getToken(MinhaLinguagemParser.K_INICIO, 0)

        def K_FIM(self):
            return self.getToken(MinhaLinguagemParser.K_FIM, 0)

        def EOF(self):
            return self.getToken(MinhaLinguagemParser.EOF, 0)

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.DeclaracaoContext,i)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,i)


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = MinhaLinguagemParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.match(MinhaLinguagemParser.K_DECLARACOES)
            self.state = 14
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 11
                self.declaracao()
                self.state = 16
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 17
            self.match(MinhaLinguagemParser.K_ALGORITMO)
            self.state = 18
            self.match(MinhaLinguagemParser.K_INICIO)
            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 142927872) != 0):
                self.state = 19
                self.comando()
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 25
            self.match(MinhaLinguagemParser.K_FIM)
            self.state = 26
            self.match(MinhaLinguagemParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self):
            return self.getToken(MinhaLinguagemParser.VARIAVEL, 0)

        def DELIM(self):
            return self.getToken(MinhaLinguagemParser.DELIM, 0)

        def tipo(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.TipoContext,0)


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = MinhaLinguagemParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(MinhaLinguagemParser.VARIAVEL)
            self.state = 29
            self.match(MinhaLinguagemParser.DELIM)
            self.state = 30
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_INTEIRO(self):
            return self.getToken(MinhaLinguagemParser.K_INTEIRO, 0)

        def K_REAL(self):
            return self.getToken(MinhaLinguagemParser.K_REAL, 0)

        def K_BOOLEANO(self):
            return self.getToken(MinhaLinguagemParser.K_BOOLEANO, 0)

        def K_TEXTO(self):
            return self.getToken(MinhaLinguagemParser.K_TEXTO, 0)

        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = MinhaLinguagemParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1920) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_comando

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CmdParaContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def K_PARA(self):
            return self.getToken(MinhaLinguagemParser.K_PARA, 0)
        def VARIAVEL(self):
            return self.getToken(MinhaLinguagemParser.VARIAVEL, 0)
        def K_DE(self):
            return self.getToken(MinhaLinguagemParser.K_DE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ExprContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,i)

        def K_ATE(self):
            return self.getToken(MinhaLinguagemParser.K_ATE, 0)
        def K_FACA(self):
            return self.getToken(MinhaLinguagemParser.K_FACA, 0)
        def K_FIM(self):
            return self.getToken(MinhaLinguagemParser.K_FIM, 0)
        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdPara" ):
                listener.enterCmdPara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdPara" ):
                listener.exitCmdPara(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdPara" ):
                return visitor.visitCmdPara(self)
            else:
                return visitor.visitChildren(self)


    class CmdEscolhaContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def K_ESCOLHA(self):
            return self.getToken(MinhaLinguagemParser.K_ESCOLHA, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ExprContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,i)

        def K_FIM(self):
            return self.getToken(MinhaLinguagemParser.K_FIM, 0)
        def K_CASO(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.K_CASO)
            else:
                return self.getToken(MinhaLinguagemParser.K_CASO, i)
        def DELIM(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.DELIM)
            else:
                return self.getToken(MinhaLinguagemParser.DELIM, i)
        def K_PADRAO(self):
            return self.getToken(MinhaLinguagemParser.K_PADRAO, 0)
        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdEscolha" ):
                listener.enterCmdEscolha(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdEscolha" ):
                listener.exitCmdEscolha(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdEscolha" ):
                return visitor.visitCmdEscolha(self)
            else:
                return visitor.visitChildren(self)


    class CmdImprimirContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def K_IMPRIMIR(self):
            return self.getToken(MinhaLinguagemParser.K_IMPRIMIR, 0)
        def expr(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdImprimir" ):
                listener.enterCmdImprimir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdImprimir" ):
                listener.exitCmdImprimir(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdImprimir" ):
                return visitor.visitCmdImprimir(self)
            else:
                return visitor.visitChildren(self)


    class CmdEnquantoContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def K_ENQUANTO(self):
            return self.getToken(MinhaLinguagemParser.K_ENQUANTO, 0)
        def expr(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,0)

        def K_FIM(self):
            return self.getToken(MinhaLinguagemParser.K_FIM, 0)
        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdEnquanto" ):
                listener.enterCmdEnquanto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdEnquanto" ):
                listener.exitCmdEnquanto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdEnquanto" ):
                return visitor.visitCmdEnquanto(self)
            else:
                return visitor.visitChildren(self)


    class CmdAtribuirContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def K_ATRIBUIR(self):
            return self.getToken(MinhaLinguagemParser.K_ATRIBUIR, 0)
        def expr(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,0)

        def K_A(self):
            return self.getToken(MinhaLinguagemParser.K_A, 0)
        def VARIAVEL(self):
            return self.getToken(MinhaLinguagemParser.VARIAVEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdAtribuir" ):
                listener.enterCmdAtribuir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdAtribuir" ):
                listener.exitCmdAtribuir(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdAtribuir" ):
                return visitor.visitCmdAtribuir(self)
            else:
                return visitor.visitChildren(self)


    class CmdLerContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def K_LER(self):
            return self.getToken(MinhaLinguagemParser.K_LER, 0)
        def VARIAVEL(self):
            return self.getToken(MinhaLinguagemParser.VARIAVEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdLer" ):
                listener.enterCmdLer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdLer" ):
                listener.exitCmdLer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdLer" ):
                return visitor.visitCmdLer(self)
            else:
                return visitor.visitChildren(self)


    class CmdSeContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def K_SE(self):
            return self.getToken(MinhaLinguagemParser.K_SE, 0)
        def expr(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,0)

        def K_ENTAO(self):
            return self.getToken(MinhaLinguagemParser.K_ENTAO, 0)
        def K_FIM(self):
            return self.getToken(MinhaLinguagemParser.K_FIM, 0)
        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,i)

        def K_SENAO(self):
            return self.getToken(MinhaLinguagemParser.K_SENAO, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdSe" ):
                listener.enterCmdSe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdSe" ):
                listener.exitCmdSe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdSe" ):
                return visitor.visitCmdSe(self)
            else:
                return visitor.visitChildren(self)



    def comando(self):

        localctx = MinhaLinguagemParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comando)
        self._la = 0 # Token type
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                localctx = MinhaLinguagemParser.CmdAtribuirContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(MinhaLinguagemParser.K_ATRIBUIR)
                self.state = 35
                self.expr(0)
                self.state = 36
                self.match(MinhaLinguagemParser.K_A)
                self.state = 37
                self.match(MinhaLinguagemParser.VARIAVEL)
                pass
            elif token in [13]:
                localctx = MinhaLinguagemParser.CmdLerContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.match(MinhaLinguagemParser.K_LER)
                self.state = 40
                self.match(MinhaLinguagemParser.VARIAVEL)
                pass
            elif token in [14]:
                localctx = MinhaLinguagemParser.CmdImprimirContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.match(MinhaLinguagemParser.K_IMPRIMIR)
                self.state = 42
                self.expr(0)
                pass
            elif token in [15]:
                localctx = MinhaLinguagemParser.CmdSeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.match(MinhaLinguagemParser.K_SE)
                self.state = 44
                self.expr(0)
                self.state = 45
                self.match(MinhaLinguagemParser.K_ENTAO)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 142927872) != 0):
                    self.state = 46
                    self.comando()
                    self.state = 51
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 52
                    self.match(MinhaLinguagemParser.K_SENAO)
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 142927872) != 0):
                        self.state = 53
                        self.comando()
                        self.state = 58
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 61
                self.match(MinhaLinguagemParser.K_FIM)
                pass
            elif token in [18]:
                localctx = MinhaLinguagemParser.CmdEnquantoContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 63
                self.match(MinhaLinguagemParser.K_ENQUANTO)
                self.state = 64
                self.expr(0)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 142927872) != 0):
                    self.state = 65
                    self.comando()
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self.match(MinhaLinguagemParser.K_FIM)
                pass
            elif token in [23]:
                localctx = MinhaLinguagemParser.CmdParaContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.match(MinhaLinguagemParser.K_PARA)
                self.state = 74
                self.match(MinhaLinguagemParser.VARIAVEL)
                self.state = 75
                self.match(MinhaLinguagemParser.K_DE)
                self.state = 76
                self.expr(0)
                self.state = 77
                self.match(MinhaLinguagemParser.K_ATE)
                self.state = 78
                self.expr(0)
                self.state = 79
                self.match(MinhaLinguagemParser.K_FACA)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 142927872) != 0):
                    self.state = 80
                    self.comando()
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 86
                self.match(MinhaLinguagemParser.K_FIM)
                pass
            elif token in [27]:
                localctx = MinhaLinguagemParser.CmdEscolhaContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.match(MinhaLinguagemParser.K_ESCOLHA)
                self.state = 89
                self.expr(0)
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 90
                    self.match(MinhaLinguagemParser.K_CASO)
                    self.state = 91
                    self.expr(0)
                    self.state = 92
                    self.match(MinhaLinguagemParser.DELIM)
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 142927872) != 0):
                        self.state = 93
                        self.comando()
                        self.state = 98
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 101 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==28):
                        break

                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==29:
                    self.state = 103
                    self.match(MinhaLinguagemParser.K_PADRAO)
                    self.state = 104
                    self.match(MinhaLinguagemParser.DELIM)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 142927872) != 0):
                        self.state = 105
                        self.comando()
                        self.state = 110
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 113
                self.match(MinhaLinguagemParser.K_FIM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprVarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIAVEL(self):
            return self.getToken(MinhaLinguagemParser.VARIAVEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprVar" ):
                listener.enterExprVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprVar" ):
                listener.exitExprVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprVar" ):
                return visitor.visitExprVar(self)
            else:
                return visitor.visitChildren(self)


    class ExprAddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ExprContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAddSub" ):
                listener.enterExprAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAddSub" ):
                listener.exitExprAddSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAddSub" ):
                return visitor.visitExprAddSub(self)
            else:
                return visitor.visitChildren(self)


    class ExprParentesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ABREPAR(self):
            return self.getToken(MinhaLinguagemParser.ABREPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,0)

        def FECHAPAR(self):
            return self.getToken(MinhaLinguagemParser.FECHAPAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprParentesis" ):
                listener.enterExprParentesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprParentesis" ):
                listener.exitExprParentesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprParentesis" ):
                return visitor.visitExprParentesis(self)
            else:
                return visitor.visitChildren(self)


    class ExprRelacionalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ExprContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,i)

        def OP_REL(self):
            return self.getToken(MinhaLinguagemParser.OP_REL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprRelacional" ):
                listener.enterExprRelacional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprRelacional" ):
                listener.exitExprRelacional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprRelacional" ):
                return visitor.visitExprRelacional(self)
            else:
                return visitor.visitChildren(self)


    class ExprMulDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MinhaLinguagemParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ExprContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprMulDiv" ):
                listener.enterExprMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprMulDiv" ):
                listener.exitExprMulDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMulDiv" ):
                return visitor.visitExprMulDiv(self)
            else:
